[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/escoria-core/game/core-scripts/esc/esc_runner.gd" type="Script" id=1]
[ext_resource path="res://addons/escoria-core/game/main.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/escoria-core/game/escoria.gd" type="Script" id=3]
[ext_resource path="res://addons/escoria-core/game/core-scripts/esc/esc_runner_level.gd" type="Script" id=4]
[ext_resource path="res://addons/escoria-core/game/inputs_manager.gd" type="Script" id=5]

[node name="escoria" type="Node"]
script = ExtResource( 3 )

[node name="inputs_manager" type="Node" parent="."]
script = ExtResource( 5 )

[node name="esc_runner" type="Node" parent="."]
script = ExtResource( 1 )

[node name="esc_level_runner" type="Node" parent="esc_runner"]
script = ExtResource( 4 )

[node name="main" parent="." instance=ExtResource( 2 )]

[editable path="main"]
